--- a/environment/Dockerfile
+++ b/environment/Dockerfile
@@ -1,4 +1,4 @@
-# hash:sha256:1d0c6284daec69f41dfd301a23bc5026b9f23ef26e2bf59cd3d02e9928421209
+# hash:sha256:f8618a28d36e66d0477ff9b9a56653eb07d78705e85fd9c777886b4382665b30
 ARG REGISTRY_HOST
 FROM $REGISTRY_HOST/codeocean/jupyterlab:3.6.1-miniconda4.12.0-python3.9-ubuntu20.04
 
@@ -12,7 +12,7 @@ RUN pip install -U --no-cache-dir \
     hdmf-zarr==0.7.0 \
     neuroconv==0.4.9 \
     pynwb==2.7.0 \
-    spikeinterface[full,widgets]==0.100.8 \
+    spikeinterface[full]==0.101.0 \
     wavpack-numcodecs==0.1.5
 
 COPY postInstall /
