--- a/metadata/metadata.yml
+++ b/metadata/metadata.yml
@@ -1,6 +1,6 @@
 metadata_version: 1
-name: NWB-Packaging-Ecephys
-description: Basic structure of a capsule to be customized as needed.
+name: NWB Packaging Ecephys
+description: Export ecephys data and metadata to NWB.
 tags:
 - NWB
 - Ecephys
