Add aind-log-utils dependency

--- a/environment/Dockerfile
+++ b/environment/Dockerfile
@@ -1,14 +1,18 @@
-# hash:sha256:0b9b727141170b3f9d666e13300f84ff3ee2b6ecae460affa7aeb7ea8e76ea82
+# hash:sha256:3c7edcc4221cfa7c0fe50fe141dd9ded13a094c54518f27c580d037aef1a9d56
 ARG REGISTRY_HOST
 FROM $REGISTRY_HOST/codeocean/jupyterlab:3.6.1-miniconda4.12.0-python3.9-ubuntu20.04
 
 ARG DEBIAN_FRONTEND=noninteractive
+ARG AWS_ACCESS_KEY_ID
+ARG AWS_DEFAULT_REGION
+ARG AWS_SECRET_ACCESS_KEY
 
 ARG GIT_ASKPASS
 ARG GIT_ACCESS_TOKEN
 COPY git-askpass /
 
 RUN pip install -U --no-cache-dir \
+    aind-log-utils==0.2.1 \
     hdmf-zarr==0.8.0 \
     neuroconv==0.6.0 \
     pynwb==2.8.1 \
