Update Python and add aind-nwb-utils

--- a/environment/Dockerfile
+++ b/environment/Dockerfile
@@ -1,6 +1,6 @@
-# hash:sha256:eed92044ca10907627565fe9993de86265a52e45f34931476e3ccc879b0aeaad
+# hash:sha256:fbf17c59c942ac7fc0b346dead561784609704c29b992d5554faa10cebc300fa
 ARG REGISTRY_HOST
-FROM $REGISTRY_HOST/codeocean/jupyterlab:3.6.1-miniconda4.12.0-python3.9-ubuntu20.04
+FROM $REGISTRY_HOST/codeocean/mambaforge3:24.5.0-0-python3.12.4-ubuntu22.04
 
 ARG DEBIAN_FRONTEND=noninteractive
 ARG AWS_ACCESS_KEY_ID
@@ -10,6 +10,15 @@ ARG AWS_SECRET_ACCESS_KEY
 ARG GIT_ASKPASS
 ARG GIT_ACCESS_TOKEN
 COPY git-askpass /
+
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends \
+        build-essential=12.9ubuntu3 \
+    && rm -rf /var/lib/apt/lists/*
+
+RUN conda install -y \
+        jupyterlab==4.4.5 \
+    && conda clean -ya
 
 RUN pip install -U --no-cache-dir \
     aind-log-utils==0.2.3 \
